# nx-software-center

./: .clang-format  .directory  .gitignore  .gitmodules  .travis.yml  AndroidManifest.xml  CMakeLists.txt  README.md  README_DEVELOPERS.md  include-AppImageUpdate.cmake  localappimagesrepository.cpp  localappimagesrepository.h  localsnaps.cpp  localsnaps.h  nx-software-center-appimage.yml  nx-software-center.pro  org.nomad.softwarecenter.actions  org.nx.softwarecenter.desktop  org.nxos.softwarecenter.desktop  snapstore.cpp  snapstore.h  travis-build.sh
src/: AppImageHubSource.cpp  AppImageHubSource.h  AppImageInstallLinksRegExParser.cpp  AppImageInstallLinksRegExParser.h  Application.h  ApplicationListModel.cpp  ApplicationListModel.h  CMakeLists.txt  CachedDownloadManager.h  DownloadManager.h  FakeDownloadManager.cpp  FetchApplicationsInteractor.cpp  FetchApplicationsInteractor.h  HomeView.qml  Interactor.h  NXSCApp.cpp  NXSCApp.h  NxSCApp.cpp  NxSCApp.h  Registry.cpp  Repository.cpp  Repository.h  SearchControler.h  SettingsView.qml  SimpleDownloadManager.cpp  SimpleDownloadManager.h  SimpleDownloadToMemoryJob.h  SnapItemDelegate.qml  StoreView.qml  changes.cpp  changes.h  httputils.cpp  httputils.h  localsnaps.cpp  localsnaps.h  main.cpp  main.qml  org.nx.softwarecenter.desktop  qml.qrc  snapd.cpp  (+12 more)
src/appimage/: appimage.cpp  appimage.h  appimagedownloadjob.cpp  appimagedownloadjob.h  appimagehubrepository.cpp  appimagehubrepository.h  appimageinstalljob.cpp  appimageinstalljob.h  appimagerepository.cpp  appimagerepository.h  appimagestoremodel.cpp  appimagestoremodel.h  appimageuninstalljob.cpp  appimageuninstalljob.h  localappimagesrepository.cpp  localappimagesrepository.h
src/assets/: nx-assets.qrc
src/data/: data.qrc  org.nx.softwarecenter.notifyrc
src/entities/: AppImageInfo.cpp  AppImageInfo.h  Application.cpp  Application.h  ApplicationAbstract.cpp  ApplicationAbstract.h  ApplicationFull.cpp  ApplicationFull.h  ApplicationSerializer.cpp  ApplicationSerializer.h  Cache.cpp  Cache.h  DeployTask.cpp  DeployTask.h  DeployedApplicationAbstract.cpp  DeployedApplicationAbstract.h  Deployer.cpp  Deployer.h  Executor.cpp  Executor.h  Explorer.cpp  Explorer.h  InstallTask.cpp  InstallTask.h  Installer.cpp  Installer.h  LocalizationUtils.cpp  LocalizationUtils.h  RecordMetadata.h  Registry.cpp  Registry.h  RemoveTask.cpp  RemoveTask.h  Remover.cpp  Remover.h  Repository.cpp  Repository.h  RestClient.cpp  RestClient.h  Source.cpp  (+31 more)
src/gateways/: AppImageHubSource.cpp  AppImageHubSource.h  AppImageInstallLinksRegExParser.h  ApplicationGetRequest.cpp  ApplicationGetRequest.h  ApplicationRepository.cpp  ApplicationRepository.h  ApplicationRepositoryGet.cpp  ApplicationRepositoryGet.h  ApplicationRepositoryRestClient.cpp  ApplicationRepositoryRestClient.h  ApplicationsRepositorySearch.cpp  ApplicationsRepositorySearch.h  ApplicationsSearchRequest.cpp  ApplicationsSearchRequest.h  CacheSource.cpp  CacheSource.h  CachedDownloadManager.cpp  CachedDownloadManager.h  ContentDownload.cpp  ContentDownload.h  DeployedApplicationsRegistry.cpp  DeployedApplicationsRegistry.h  Download.cpp  Download.h  DownloadManager.h  FileDownload.cpp  FileDownload.h  GetApplicationRequest.cpp  GetApplicationRequest.h  OCSStoreDataParser.cpp  OCSStoreDataParser.h  OCSStoreSource.cpp  OCSStoreSource.h  RestClient.cpp  RestClient.h  SimpleDownloadManager.cpp  SimpleDownloadManager.h  SimpleDownloadToFileJob.cpp  SimpleDownloadToFileJob.h  (+6 more)
src/helper/: snapdhelper.cpp  snapdhelper.h
src/interactors/: FetchApplicationsInteractor.cpp  FetchApplicationsInteractor.h  InstallAppImageInteractor.cpp  InstallAppImageInteractor.h  Interactor.h  RemoveAppImageInteractor.cpp  RemoveAppImageInteractor.h  RunInteractor.cpp  RunInteractor.h  TaskMetadata.h  deployappimagereleaseinteractor.cpp  deployappimagereleaseinteractor.h  downloadappimagereleaseinteractor.cpp  downloadappimagereleaseinteractor.h  downloadappimagereleaseinteractorlistener.h  executeappimagereleaseinteractor.cpp  executeappimagereleaseinteractor.h  executeappimagereleaseinteractorlistener.h  fetchappimagehubinteractor.cpp  fetchappimagehubinteractor.h  getapplicationinteractor.cpp  getapplicationinteractor.h  getapplicationinteractorlistener.h  installappimagereleaseinteractor.cpp  installappimagereleaseinteractor.h  interactor.cpp  interactor.h  removeappimagereleaseinteractor.cpp  removeappimagereleaseinteractor.h  removeappimagereleaseinteractorlistener.h  searchapplicationsinteractor.cpp  searchapplicationsinteractor.h  searchapplicationsinteractorlistener.h
src/models/: ApplicationsRegistryModel.cpp  ApplicationsRegistryModel.h  ApplicationsRegistryProxyModel.cpp  ApplicationsRegistryProxyModel.h  TasksListModel.cpp  TasksListModel.h  app.cpp  app.h  applicationmanager.cpp  applicationmanager.h  appsmodel.cpp  appsmodel.h  categoriesmodel.cpp  categoriesmodel.h  categorymanager.cpp  categorymanager.h  package.cpp  package.h  progressmanager.cpp  progressmanager.h  storemodel.cpp  storemodel.h
src/presentation/: ActionFactory.js  ActionUtils.js  ApplySettingsAction.js  DepartamentsView.qml  HomeView.qml  RemoveSnapAction.js  SearchView.qml  SetDefaultSettingsAction.js  SettingsView.qml  SnapDetailsView.qml  SnapElementDelegate.qml  SnapGrid.qml  SnapsModel.qml  StatusArea.qml  StoreView.qml  TextConstants.qml  Utils.js  files.qrc  main.qml
src/qml/: ActionFactory.js  ActionUtils.js  AppDetailsView.qml  AppImageListItemDelegate.qml  AppImageStoreView.qml  ApplicationGridItemDelegate.qml  ApplicationView.qml  ChangesView.qml  DepartamentSnapsView.qml  (+29 more)
test/: CMakeLists.txt
tests/: CMakeLists.txt  DummyProgressNotificationSource.cpp  DummyProgressNotificationSource.h  TestApplication.cpp  TestApplication.h  TestApplicationData.cpp  TestApplicationData.h  TestApplicationsDirsWatcher.cpp  TestApplicationsDirsWatcher.h  TestApplicationsRegistry.cpp  TestApplicationsRegistry.h  TestBundleInspector.cpp  TestBundleInspector.h  TestBundlesDirsWatcher.cpp  TestBundlesDirsWatcher.h  TestUpdateService.cpp  TestUpdateService.h  TestUtils.hpp
(+353 files in other folders)
